--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style>
         body {
             background-color: #f8f9fa;
+            font-family: Arial, sans-serif;
         }
         .container {
             max-width: 600px;
@@ -16,11 +17,17 @@
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
             margin-top: 50px;
+            text-align: center;
+        }
+        .logo {
+            width: 150px;
+            margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
     <div class="container">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/48/Telkomsel_Orbit_logo.png" alt="Telkomsel Orbit" class="logo">
         <h2 class="text-center">Sewa Orbit</h2>
         <form id="sewaForm">
             <div class="mb-3">
@@ -61,6 +68,8 @@
                         <option value="">Pilih Negara Tujuan</option>
                         <option value="USA">USA</option>
                         <option value="UK">UK</option>
+                        <option value="Jepang">Jepang</option>
+                        <option value="Jerman">Jerman</option>
                     </select>
                 </div>
             </div>
@@ -68,8 +77,8 @@
                 <label for="jenisOrbit" class="form-label">Jenis Orbit:</label>
                 <select id="jenisOrbit" class="form-select" required onchange="hitungBiaya()">
                     <option value="">Pilih Jenis Orbit</option>
-                    <option value="Orbit Star">Orbit Star</option>
-                    <option value="Orbit Pro">Orbit Pro</option>
+                    <option value="Orbit Star">Orbit Star (Kuota 10GB/Hari)</option>
+                    <option value="Orbit Pro">Orbit Pro (Kuota 20GB/Hari)</option>
                 </select>
             </div>
             <div class="mb-3">
@@ -84,51 +93,24 @@
                     <option value="Dokumen Identitas">Dokumen Identitas</option>
                 </select>
             </div>
-            <div class="mb-3">
-                <label for="uploadKTP" class="form-label">Unggah KTP:</label>
-                <input type="file" id="uploadKTP" class="form-control" required>
-            </div>
-            <div class="mb-3">
-                <label for="uploadSelfie" class="form-label">Unggah Foto Selfie dengan KTP:</label>
-                <input type="file" id="uploadSelfie" class="form-control" required>
-            </div>
-            <div class="mb-3">
-                <label for="tandaTangan" class="form-label">Tanda Tangan Digital:</label>
-                <input type="file" id="tandaTangan" class="form-control" required>
-            </div>
-            <div class="mb-3">
-                <input type="checkbox" id="syaratKetentuan" required>
-                <label for="syaratKetentuan">Saya menyetujui <a href="#">Syarat & Ketentuan</a></label>
-            </div>
             <button type="button" class="btn btn-primary w-100" onclick="kirimData()">Kirim</button>
         </form>
-        <p class="text-center mt-3"><a href="#" class="btn btn-info" onclick="bukaChat()">Live Chat Support</a></p>
     </div>
-
     <script>
-        function toggleLokasi() {
-            let lokasi = document.getElementById("lokasi").value;
-            document.getElementById("lokasiIndonesia").style.display = lokasi === "indonesia" ? "block" : "none";
-            document.getElementById("lokasiLuarNegeri").style.display = lokasi === "luar-negeri" ? "block" : "none";
-        }
         function hitungBiaya() {
             let durasi = document.getElementById("durasi").value;
             let lokasi = document.getElementById("lokasi").value;
             let jenisOrbit = document.getElementById("jenisOrbit").value;
             let biaya = 0;
             if (durasi && lokasi && jenisOrbit) {
-                if (lokasi === "indonesia") biaya = 50000;
-                if (lokasi === "luar-negeri") biaya = 100000;
+                if (lokasi === "indonesia") biaya = 20000;
+                if (lokasi === "luar-negeri") biaya = 50000;
                 if (jenisOrbit === "Orbit Pro") biaya += 20000;
                 if (durasi === "1 Minggu") biaya *= 7;
                 if (durasi === "1 Bulan") biaya *= 30;
             }
             document.getElementById("estimasiBiaya").value = biaya ? "Rp " + biaya.toLocaleString() : "";
         }
-        function bukaChat() {
-            window.open("https://wa.me/6281234567890", "_blank");
-        }
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
