--- a/index.html
+++ b/index.html
@@ -63,13 +63,20 @@
             </div>
             <div id="lokasiLuarNegeri" style="display: none;">
                 <div class="mb-3">
+                    <label for="benua" class="form-label">Benua:</label>
+                    <select id="benua" class="form-select" required onchange="updateNegara()">
+                        <option value="">Pilih Benua</option>
+                        <option value="Asia">Asia</option>
+                        <option value="Eropa">Eropa</option>
+                        <option value="Amerika">Amerika</option>
+                        <option value="Australia">Australia</option>
+                        <option value="Afrika">Afrika</option>
+                    </select>
+                </div>
+                <div class="mb-3">
                     <label for="negara" class="form-label">Negara Tujuan:</label>
-                    <select id="negara" class="form-select" required onchange="hitungBiaya()">
+                    <select id="negara" class="form-select" required>
                         <option value="">Pilih Negara Tujuan</option>
-                        <option value="USA">USA</option>
-                        <option value="UK">UK</option>
-                        <option value="Jepang">Jepang</option>
-                        <option value="Jerman">Jerman</option>
                     </select>
                 </div>
             </div>
@@ -97,19 +104,25 @@
         </form>
     </div>
     <script>
-        function hitungBiaya() {
-            let durasi = document.getElementById("durasi").value;
-            let lokasi = document.getElementById("lokasi").value;
-            let jenisOrbit = document.getElementById("jenisOrbit").value;
-            let biaya = 0;
-            if (durasi && lokasi && jenisOrbit) {
-                if (lokasi === "indonesia") biaya = 20000;
-                if (lokasi === "luar-negeri") biaya = 50000;
-                if (jenisOrbit === "Orbit Pro") biaya += 20000;
-                if (durasi === "1 Minggu") biaya *= 7;
-                if (durasi === "1 Bulan") biaya *= 30;
+        function updateNegara() {
+            let benua = document.getElementById("benua").value;
+            let negaraSelect = document.getElementById("negara");
+            let negaraOptions = {
+                "Asia": ["Jepang", "Korea Selatan", "China", "Thailand", "Singapura"],
+                "Eropa": ["UK", "Jerman", "Prancis", "Italia", "Spanyol"],
+                "Amerika": ["USA", "Kanada", "Meksiko"],
+                "Australia": ["Australia", "Selandia Baru"],
+                "Afrika": ["Afrika Selatan", "Mesir", "Nigeria"]
+            };
+            negaraSelect.innerHTML = "<option value=''>Pilih Negara Tujuan</option>";
+            if (benua && negaraOptions[benua]) {
+                negaraOptions[benua].forEach(negara => {
+                    let option = document.createElement("option");
+                    option.value = negara;
+                    option.textContent = negara;
+                    negaraSelect.appendChild(option);
+                });
             }
-            document.getElementById("estimasiBiaya").value = biaya ? "Rp " + biaya.toLocaleString() : "";
         }
     </script>
 </body>
