--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sewa Orbit</title>
+    <title>Orbit Roam</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <style>
         body {
@@ -65,11 +65,20 @@
                     <label for="negara" class="form-label">Negara Tujuan:</label>
                     <select id="negara" class="form-select" required onchange="hitungBiaya()">
                         <option value="">Pilih Negara Tujuan</option>
+                        <option value="AmerikaSerikat">Amerika Serikat</option>
                         <option value="USA">USA</option>
                         <option value="UK">UK</option>
+                        <option value="Australia">Australia</option>
                         <option value="Germany">Germany</option>
-                        <option value="France">France</option>
+                        <option value="Belgia">Belgia</option>
                         <option value="Italy">Italy</option>
+                        <option value="Brasil">Brasil</option>
+                        <option value="Bulgaria">Bulgaria</option>
+                        <option value="Norway">Norway</option>
+                        <option value="Belgium">Belgium</option>
+                        <option value="China">China</option>
+                        <option value="Filipina">Filipina</option>
+                        <option value="Georgia">Georgia</option>
                         <option value="Spain">Spain</option>
                         <option value="Japan">Japan</option>
                         <option value="China">China</option>
@@ -83,8 +92,8 @@
                 <label for="jenisOrbit" class="form-label">Jenis Orbit:</label>
                 <select id="jenisOrbit" class="form-select" required onchange="hitungBiaya()">
                     <option value="">Pilih Jenis Orbit</option>
-                    <option value="Orbit Star">Orbit Star</option>
-                    <option value="Orbit Pro">Orbit Pro</option>
+                    <option value="Orbit Home">Orbit Home</option>
+                    <option value="Orbit Mifi">Orbit Mifi</option>
                 </select>
             </div>
             <div class="mb-3">
@@ -125,6 +134,10 @@
             <div class="mb-3">
                 <input type="checkbox" id="syaratKetentuan" required>
                 <label for="syaratKetentuan">Saya menyetujui <a href="#">Syarat & Ketentuan</a></label>
+             </div>
+            <!-- Live Chat -->
+            <div class="mb-3">
+                <a href="https://wa.me/6281235628878" target="_blank" class="btn btn-success w-100">Live Chat</a>
             </div>
             <button type="button" class="btn btn-primary w-100" onclick="kirimData()">Kirim</button>
         </form>
@@ -148,7 +161,7 @@
                 if (lokasi === "indonesia") biaya = 20000;
                 if (lokasi === "luar-negeri") biaya = 50000;
 
-                if (jenisOrbit === "Orbit Pro") biaya += 20000;
+                if (jenisOrbit === "Orbit Mifi") biaya += 20000;
                 if (kuota === "30GB") biaya += 30000;
                 if (kuota === "50GB") biaya += 50000;
 
@@ -156,11 +169,7 @@
                 if (durasi === "1 Bulan") biaya *= 30;
             }
             document.getElementById("estimasiBiaya").value = biaya ? "Rp " + biaya.toLocaleString() : "";
-        }
-
-        function kirimData() {
-            // Fungsi untuk mengirimkan data ke server atau database
-            alert("Data telah terkirim!");
+        
         }
     </script>
 </body>
