--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 </head>
 <body>
     <div class="container">
-        <img src="URL_LOGO_ANDA" alt="Logo Sewa Orbit" class="logo">
-        <h2 class="text-center">Sewa Orbit</h2>
+        <img src="URL_LOGO_ANDA" alt="Logo ORBIT ROAM" class="logo">
+        <h2 class="text-center">ORBIT ROAMt</h2>
         <form id="sewaForm">
             <div class="mb-3">
                 <label for="nama" class="form-label">Nama:</label>
