--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <div class="container">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRTWwicp5ZvlDohyWNHq-Vk4vbLlM0FZDQUCQ&s" alt="Logo ORBIT ROAM" class="logo">
-        <h2 class="text-center">ORBIT ROAM</h2>
+        <h2 class="text-center">Orbit Roam</h2>
         <form id="sewaForm">
             <div class="mb-3">
                 <label for="nama" class="form-label">Nama:</label>
